AWS EC2/deploy-kubernetes/ingress/ip-whitelist-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: swagger-admin-ip-whitelist
  namespace: thock-prod
spec:
  ipAllowList:
    sourceRange:
      - 220.79.119.124/32
